# adrs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: test.yml
adrs/: __init__.py  alpha.py  installer.py  logging.py  portfolio.py  subjects.py  types.py  utils.py
adrs/data/: __init__.py  cache.py  connector.py  connectors.py  database.py  dataloader.py  datamap.py  datasource.py  event.py  handler.py  processor.py  progress.py  stream.py  types.py  utils.py
adrs/execution/: __init__.py  backtest.py  executor.py  metadata.py  portfolio.py  runner.py
adrs/io/: __init__.py  stream.py
adrs/model/: model.py  zscore.py
adrs/oms/: oms.py  (+5 more)
examples/: alpha_with_custom_datasource.py  alpha_with_external_data.py  download.py  example_alpha.py  portfolio.py  portfolio_oms.py  run_oms.py  sensitivity.py  yfinance_data.py
scripts/: build.py  nats_server.py  oms_command.py  oms_loadtest.py  verify_bybit_rate_limiter.py
tests/: test_api.py  test_calculation.py  test_config_manager.py  test_dataloader.py  test_datamap.py  test_datasource.py  test_error_policy.py  test_json.py  test_lookahead.py  test_metric_subject.py  test_model.py  test_oms.py  test_order_executer.py  test_order_executer_ops.py  test_order_placement_manager.py  test_periodic_resync.py  test_position_manager.py  test_rate_limiter_reserve.py  test_remap_portfolio_ids.py  test_report.py  test_risk_engine.py  test_runner.py  test_search.py  test_signal.py  test_signal_subject.py  test_stream_retry.py  test_symbol.py  test_topic.py  test_utils.py
(+41 files in other folders)
