[project]
name = "adrs"
version = "1.0.1"
description = "Alpha development research system."
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = { file = "LICENSE" }
authors = [{ name = "Marcus Lee", email = "marcuslee@balaenaquant.com" }]
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "cybotrade-datasource>=0.1.9",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pandera>=0.26.0",
    "polars>=1.35.0",
    "pyarrow>=22.0.0",
    "pydantic>=2.11.7",
]

[project.urls]
"Homepage" = "https://github.com/balaenaquant/adrs.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.custom]
path = "scripts/build.py"

[tool.pyrefly]
project-excludes = []

[tool.ruff]
lint.ignore = ["E731"]
extend-exclude = ["tests/lib/*"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
pythonpath = ["."]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "fastparquet>=2024.11.0",
    "hatch>=1.15.1",
    "pre-commit>=4.3.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
